# dotfiles

./: .editorconfig  .env  .gitconfig  .hushlogin  .osx  .p10k.zsh  .skhdrc  .tmux.conf  .vimrc  .zshrc  README.md  SECURITY.md  aliases  macos  macos-cmd  macos-init  openconnect.exp  readme.md  shadowrocket.ini  sqls.md  vim-cmd.txt
.config/alacritty/: alacritty.toml
.config/bat/: config
.config/fastfetch/: config.jsonc
.config/git/: .git-commit-types  README.md  config  ignore  ssh_login_without_pwd.md
.config/mise/: config.toml
.config/neofetch/: config.conf
.config/nvim/: .stylua.toml  README.md  init.lua  lazy-lock.json  readme.md  stylua.toml
.config/nvim/lua/config/: autocmds.lua  keymaps.lua  lazy.lua  options.lua
.config/nvim/lua/plugins/: alpha.lua  autocompletion.lua  autopairs.lua  bufferline.lua  bufremove.lua  colortheme.lua  comment.lua  dashboard.lua  gitsigns.lua  indent-blankline.lua  init.lua  lsp.lua  lualine.lua  mason.lua  neotree.lua  noice.lua  nui.lua  nvim-notify.lua  nvimtree.lua  snacks.lua  telescope.lua  toggleterm.lua  treesitter.lua  which-key.lua  window-picker.lua
.config/vim/: vimrc
.config/zsh/: .zsh_history  .zshrc  00-env.zsh  10-options.zsh  20-aliases.zsh  40-plugins.zsh  90-prompt.zsh  aliases.zsh  env.zsh  exports.zsh  options.zsh  plugins.zsh  prompt.zsh  sdkman.zsh
.github/workflows/: codeql.yml  qodana-python.yml  ruff-lint.yml
.ssh/: config
db/: mysql  postgresql.md
devops/: logrotate.md  sonarqube.md  vault.md
devops/container-notes/docker/: Harbor私有仓库搭建.md  daemon.json  readme.md
devops/container-notes/docker/dc/: readme.md
devops/container-notes/docker/df/: Dockerfile  ffmpeg-df  readme.md
devops/container-notes/k8s/: k8s集群环境搭建--生产.md  以配置文件方式创建k8s资源.md  运维常用命令.md
devops/containers/: README.md  readme.md
devops/containers/docker/: .dockerignore  README.md  daemon.json  daemon.jsonc  docker-run-containers.md  readme.md
devops/containers/docker/dc/: .env  README.md  dc-elk.yml  jupyter_notebook_dc.yml
devops/containers/docker/df/: README.md  duckdb_df  ffmpeg-df  ffmpeg_df  ffmpeg_df_v1  readme.md
devops/containers/k8s/: README.md  k8s集群环境搭建--本地.md  k8s集群环境搭建--生产.md  运维常用命令.md
devops/containers/podman/: README.md  readme.md
devops/db/: arangodb.md  mysql.md  postgresql.md
devops/db/arangodb/: README.md  abackup.sh  arestore.sh  readme.md
devops/db/duckdb/: README.md  cli.md  sample.py
devops/db/mongodb/: README.md
devops/db/mysql/: .my.cnf  0_mysql_backup.sh  1_mysql_restore.sh  MySQL客户端.md  README.md  db_info.sql  innodb_cluster_docker.md  install_mysql.sh  install_mysql8.sh  my.cnf  my_dump.sh  my_restore.sh  mysql-shell.md  mysql_config_editor.md  mysql_restore.sh  percona-toolkit.md  plugins  plugins.sql  readme.md  samples.md
devops/db/postgresql/: README.md  readme.md  samples.md  samples.sql
devops/db/redis/: README.md  redis.conf  哨兵机制.md
devops/docker/: Harbor私有仓库搭建.md  docker-run-containers.md  readme.md
devops/docker/dc/: elk-dc.yml  jupyter_notebook-dc.yml  readme.md  sonarqube-dc.yml
devops/docker/df/: Dockerfile.md  readme.md
devops/duckdb/: README.md  cli.md  demo.py  readme.md  sample.py
devops/elk/: docker-compose.yml
devops/elk/logstash/: logstash.conf
devops/git/: .gitconfig  .gitignore  README.md  readme.md
devops/go/: .air.toml  get_project_path.go  log_config.go  readme.md
devops/java/: .sdkmanrc  README.md  pom-sample.md  sdkman.md
devops/java/utils/: Scheduler.java
devops/k8s/: k8s学习和测试.md  k8s架构和安装.md  k8s资源.md  k8s集群环境搭建--生产.md  kubectl_apply.md  readme.md  学习使用--本地搭建k8s集群.md  常用命令.md  运维常用命令.md
devops/linux/: README.md  centos.md  clis.md  cmds.md  readme.md  ubuntu.md
devops/linux/os/: centos.md  readme.md  ubuntu.md
devops/linux/shell/: colorful_font.sh  create_python_project.sh  log.sh  monitor.sh  shell_tpl.sh
devops/log/: logrotate.md
devops/macos/: .osx  .skhdrc  Brewfile  README.md
devops/monitoring/: README.md  docker-compose.yml
devops/monitoring/alertmanager/: config.yml
devops/monitoring/prometheus/: alert.rules.db.yml  alert.rules.middleware.yml  alert.rules.yml  prometheus.yml
devops/monitoring/prometheus/targets/: db.yml  middleware.yml  web.yml  worker.yml
devops/network/: readme.md
devops/nginx/: default.conf  readme.md
devops/nodejs/: README.md  readme.md
devops/nodejs/nestjs/: readme.md
devops/nodejs/nextjs/: README.md
devops/podman/: readme.md
devops/python/: Makefile  README.md  alembic.md  aql_config.py  log_config.py  pyproject.toml  readme.md  samples.md  setup.py  tips.md  vault.py
devops/python/utils/: aes_gcm.py  aql_config.py  hash_pwd.py  log_config.py  mysql_config.py  psql_asyncpg_config.py  psql_config.py  secret_encryptor.py  settings.py  vault.py
devops/rust/: README.md
devops/sonarqube/: 代码安全扫描.md
docker/: .env  cmd.md  docker-compose.yml  docker.md  ffmpeg-df  readme.md
docker/dc/: cust-dc.yml  dc_template.md  readme  sonarqube-dc.yml
docker/df/: ffmpeg-df  readme.md
git/: .gitconfig  cmd  ssh_login_without_pwd.md
ipaddr/: ipv4.md
linux/: centos.md  debian.md  readme.md  ubuntu.md
log/: logrotate.md
macos/: .osx  setup-mac.sh
network/ipaddress/: ipv4.md
nginx/: default.conf
python/: REDEME.md  log_config.py  psql_config.py  pyproject.toml  tips.md
python-scripts/: .isort.cfg  REDEME.md  conn_to_mysql.py  conn_to_postgresql.py  log_config.py  mysql_config.py  postgresql_config.py  pretty_errors_config.py  psql_config.py  pyproject.toml  tips.md
rime-cus/: custom_phrase.txt  default.custom.yaml  squirrel.custom.yaml
shell-scripts/: download_files.sh  output_colorful_bg_font.sh  send_files.sh
vscode/: keybindings.json  settings.json  theme.json
ymls/: docker-compose.yml
