# 用于配置 Python 项目的标准化文件
[project]
name = "my_package"  # 项目名称
version = "0.1.0"  # 项目版本
description = "A sample Python package"  # 项目描述
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = ["requests>=2.25", "numpy>=1.21"]  # 依赖项

[tool.ruff]
# 指定哪些文件或目录应被检查
target-version = "py39"  # 目标 Python 版本
line-length = 100        # 每行最大长度
extend-exclude = [
    "__pycache__",
    "migrations/",
    ".venv/",
    "tests/",
]                        # 忽略特定目录
# 启用或禁用特定规则
select = ["F", "E", "W", "C90", "B"]  # 启用的规则 (如 Flake8, Black, etc.)
ignore = ["E501"]                     # 禁用的规则 (如 禁用行宽超限)
# 对特定插件进行配置
[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"  # 禁止相对导入
# 针对特定文件或目录忽略特定规则
[tool.ruff.per-file-ignores]
"tests/test_*.py" = ["F401", "F403"]  # 忽略未使用的导入和 * 导入

[tool.isort]
line_length = 100    # 指定每行代码的最大字符数
multi_line_output = 3   # 定义多行导入的格式
include_trailing_comma = True   # 在多行导入的最后一个模块后添加尾随逗号
force_grid_wrap = 0    # 定义何时使用网格格式
use_parentheses = True   # 使用圆括号而不是反斜杠
ensure_newline_before_comments = True    # 在导入语句上方的注释之前确保有一个新行
known_first_party = ['my_module', 'my_other_module']   # import my_module, from my_other_module import xxx
default_section = 'THIRDPARTY'     # 为未分类模块设置默认第三方库
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']     # 定义导入语句的排序顺序
