# 用于配置 Python 项目的标准化文件
# pip install -e ".[dev]"    安装项目及开发依赖
# isort path/to/file.py / isort .     检查并修复单个文件/整个项目
#     ruff check path/to/file.py --fix   检查并修复单个文件
#     ruff check path/to/project/ --fix  检查并修复整个项目
#     ruff check . --fix                 检查并修复当前目录中的所有py文件
#     ruff format .     格式化代码
# mypy path/to/your_file.py 检测单个文件并手动修改
# mypy path1 path2 检测该路径下所以py文件并手动修改


# ============================================================
# 构建系统
# ============================================================
[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

# ============================================================
# 项目元数据 (PEP 621)
# ============================================================
[project]
name = "my_project"
version = "0.1.0"
description = "A sample Python package"
maintainers = [{ name = "Your Name", email = "your.email@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "requests>=2.25",
    "numpy>=1.21",
]

[project.urls]
homepage = "https://your-homepage.com"
repository = "https://github.com/your-repo"
documentation = "https://your-docs-url"

[project.optional-dependencies]
async = ["asgiref>=3.2"]
dotenv = ["python-dotenv"]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

# ============================================================
# Flit 特定配置
# ============================================================
[tool.flit.module]
name = "my_project"

[tool.flit.sdist]
include = [
    "docs/",
    "examples/",
    "tests/",
    "pyproject.toml",
    "requirements.txt",
]
exclude = [
    "docs/_build/",
    ".venv/",
    "__pycache__/",
]

# ============================================================
# Ruff — 代替 flake8 + isort + black
# ============================================================
[tool.ruff]
target-version = "py310"        # 与 requires-python 保持一致
line-length = 100
fix = true
show-fixes = true
output-format = "full"
extend-exclude = [
    "__pycache__",
    "migrations/",
    ".venv/",
]

[tool.ruff.lint]
select = [
    "B",      # flake8-bugbear
    "E",      # pycodestyle error
    "F",      # pyflakes
    "I",      # isort（替代独立 isort）
    "UP",     # pyupgrade
    "W",      # pycodestyle warning
    "SIM",    # flake8-simplify — 推荐新增
    "RUF",    # Ruff 自有规则 — 推荐新增
]
ignore = ["E402", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["my_project"]   # 替代 [tool.isort]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true         # 格式化 docstring 中的代码示例

# ============================================================
# Mypy — 静态类型检查
# ============================================================
[tool.mypy]
python_version = "3.10"              # 与 requires-python 保持一致
strict = true                        # 包含绝大多数 disallow_*/warn_* 选项
warn_unreachable = true              # strict 不含此项，需单独开启
namespace_packages = true
incremental = true
cache_dir = ".mypy_cache"
sqlite_cache = true
follow_imports = "silent"
plugins = []

[[tool.mypy.overrides]]
module = [
    "asgiref.*",
    "dotenv.*",
    "cryptography.*",
    "importlib_metadata",
]
ignore_missing_imports = true

# ============================================================
# Pytest（如使用）
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
